--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  build:
+  build-nova-sl7:
 
     runs-on: ubuntu-latest
 
@@ -16,5 +16,13 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build novaexperiment/sl7:latest
       run: docker build . --file Dockerfile --tag novaexperiment/sl7:latest
+
+
+  build-nova-sl7-mpich:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
     - name: Build novaexperiment/sl7:mpichdiy
       run: docker build . --file Dockerfile_mpichdiy --tag novaexperiment/sl7:mpichdiy
