--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,9 @@ on:
     branches: [ master, mpichdiy ]
   pull_request:
     branches: [ master, mpichdiy ]
+  push:
+    tags:
+    - '*'
 
 jobs:
 
