adding latest branch into github action

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,11 +2,11 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ master, mpichdiy ]
+    branches: [ latest, master, mpichdiy ]
     tags:
       - '*'
   pull_request:
-    branches: [ master, mpichdiy ]
+    branches: [ latest, master, mpichdiy ]
 jobs:
 
   push_to_registries:
