add workflow dispatch

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,6 +7,8 @@ on:
       - '*'
   pull_request:
     branches: [ latest, master, mpichdiy ]
+  workflow_dispatch:
+
 jobs:
 
   push_to_registries:
