ignore changes to README.md for CI jobs triggers

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,6 +5,8 @@ on:
     branches: [ latest, master, mpichdiy ]
     tags:
       - '*'
+    paths-ignore:
+      - 'README.md'
   pull_request:
     branches: [ latest, master, mpichdiy ]
   workflow_dispatch:
