--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ on:
 jobs:
 
   push_to_registries:
-    name: Push Docker image to multiple registries
+    name: Build and push Docker image to GitHub registries
     runs-on: ubuntu-latest
     environment: dockerhub
     permissions:
